[tool.pylint.MASTER]
indent-string="  "

[tool.pytest.ini_options]
pythonpath  = "vehicle_api"
addopts     = "-ra -v" # -ra => full test summary

[tool.poetry]
name        = "vehicle-api"
version     = "0.1.0-rc"
description = "vehicle-api {...}"
authors     = ["Schroettinger, Dominik <dominik.schroettinger@devoteam.com>"]
readme      = "README.md"

[tool.poetry.dependencies]

requests = "^2.32.2" # ==> Bundled as λ-Layer in our Terraform-Module
python   = "^3.12.0"

[tool.poetry.dev-dependencies]

boto3 = "^1.35.15"

python-dotenv = "^1.0.0"

freezegun = "^1.5.0"

coverage = "^7.6.0"

pydantic-factories = "^1.17.0" # ==> Use "polyfactory" instead!

# Ships Pydantic, etc.
aws-lambda-powertools = {extras = ["all"], version = "^2.43.0"}

pytest = "^8.3.0"
pylint = "^3.2.5"

# {...}
